# ug-experiment-calculator

./: .gitignore  README.md  pyproject.toml
ug_experiment_calculator/: __init__.py  calculator.py  colors.py  config.py  confluence_charts.py  confluence_tables.py  echarts.py  funnels.yaml  metrics.py  metrics.yaml  repository.py  rollout.py  stats.yaml  summary_tables.py  value_formatting.py
ug_experiment_calculator/queries/: create_table_template.sql  create_transient_table_template.sql  exp_raw_data_app.sql  exp_raw_data_app_insert.sql  exp_raw_data_mobweb.sql  exp_raw_data_mobweb_app.sql  exp_raw_data_mobweb_app_users.sql  exp_raw_data_mobweb_insert.sql  exp_raw_data_mobweb_schema.sql  exp_raw_data_mobweb_web_installs.sql  exp_raw_data_mobweb_web_users.sql  exp_raw_data_web.sql  exp_raw_data_web_insert.sql  get_sloperator_temp_tables.sql  get_ug_exp_info.sql  get_ug_exps_ids_to_calc.sql  monetization_metrics.sql  retention_metrics.sql  rollout_recent_users_daily.sql  rollout_split_users_daily.sql  subscription_transactions_store_by_sub_date.sql  subscriptions_by_sub_date.sql  subscriptions_joined_by_sub_date.sql  subscriptions_store_by_sub_date.sql  tab_view_metrics.sql  tour_subscription_funnels.sql
