[project]
name = "ug-experiment-calculator"
version = "0.3.3"
description = "Experiment monetization metrics calculator backed by ClickHouse"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-worker @ git+https://github.com/DarkPatrick/clickhouse-worker.git@main",
    "numpy>=2.1",
    "pandas>=2.2.3",
    "PyYAML>=6.0.2",
    "scipy>=1.14.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ug_experiment_calculator*"]


[tool.setuptools.package-data]
ug_experiment_calculator = [
    "metrics.yaml",
    "stats.yaml",
    "funnels.yaml",
    "queries/*.sql",
]
